# PieDock

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
res/: PieDockrc.sample  piedockrc.sample
res/active-indicators/: COPYRIGHT
sh/: autogen  dbg  dbgrc  deploy  instant  pack  rookie  setup
src/: ActiveIndicator.cpp  ActiveIndicator.h  Application.cpp  Application.h  ArgbSurface.cpp  ArgbSurface.h  ArgbSurfaceSizeMap.cpp  ArgbSurfaceSizeMap.h  Blender.cpp  Blender.h  Cartouche.cpp  Cartouche.h  Environment.cpp  Environment.h  ErrnoException.h  Hotspot.cpp  Hotspot.h  Icon.h  IconMap.cpp  IconMap.h  Makefile.am  Makefile.in  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuItemWithWorkspaces.cpp  MenuItemWithWorkspaces.h  MenuItems.h  ModMask.cpp  ModMask.h  PieMenu.cpp  PieMenu.h  PieMenuWindow.cpp  PieMenuWindow.h  Png.cpp  Png.h  PngSurface.cpp  PngSurface.h  Resampler.cpp  (+20 more)
utils/: Makefile.am  Makefile.in  Utilities.cpp  Utilities.h  main.cpp
