bin_PROGRAMS = PieDock
PieDock_SOURCES = \
	Surface.cpp Surface.h \
	ArgbSurface.cpp ArgbSurface.h \
	ArgbSurfaceSizeMap.cpp ArgbSurfaceSizeMap.h \
	XSurface.cpp XSurface.h \
	PngSurface.cpp PngSurface.h \
	Blender.cpp Blender.h \
	Resampler.cpp Resampler.h \
	WildcardCompare.cpp WildcardCompare.h \
	IconMap.cpp IconMap.h \
	ActiveIndicator.cpp ActiveIndicator.h \
	Hotspot.cpp Hotspot.h \
	TransparentWindow.cpp TransparentWindow.h \
	Cartouche.cpp Cartouche.h \
	Text.cpp Text.h \
	WindowStack.cpp WindowStack.h \
	Icon.h \
	MenuItem.cpp MenuItem.h \
	MenuItems.h \
	Menu.cpp Menu.h \
	PieMenu.cpp PieMenu.h \
	PieMenuWindow.cpp PieMenuWindow.h \
	WindowManager.cpp WindowManager.h \
	ModMask.cpp ModMask.h \
	Environment.cpp Environment.h \
	Settings.cpp Settings.h \
	Application.cpp Application.h \
	main.cpp
